<?xml version="1.0" encoding="utf-8"?>
<!--
# Copyright (c) 2012, The Linux Foundation. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are
# met:
#    * Redistributions of source code must retain the above copyright
#      notice, this list of conditions and the following disclaimer.
#    * Redistributions in binary form must reproduce the above
#      copyright notice, this list of conditions and the following
#      disclaimer in the documentation and/or other materials provided
#      with the distribution.
#    * Neither the name of Linux Foundation nor the names of its
#      contributors may be used to endorse or promote products derived
#      from this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED "AS IS" AND ANY EXPRESS OR IMPLIED
# WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT
# ARE DISCLAIMED.  IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS
# BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
# CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
# SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
# BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
# OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
# IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
# -->
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:padding="10dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:orientation="vertical">
    <TextView android:text="@string/characteristics_prompt" android:layout_marginTop="10dip" android:layout_height="wrap_content" android:id="@+id/TextView01" android:layout_width="fill_parent"></TextView>
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/characteristics_prompt"
    />
    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/empty_string" android:id="@+id/readText"></EditText>
    <Button android:text="@string/Read_Value" android:id="@+id/readButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
    <Button android:text="@string/Set_Notify_indicate" android:id="@+id/notificationButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
    <Button android:text="@string/Clear_Notify_indicate" android:id="@+id/clearNotify" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
    <EditText android:layout_height="wrap_content" android:text="@string/empty_string" android:id="@+id/writeValueText" android:layout_width="match_parent"></EditText>
    <Button android:text="@string/Write_Value" android:id="@+id/writeButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
    <TextView android:text="@string/status" android:id="@+id/textStatus" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/empty_string" android:id="@+id/statusText"></EditText>
</LinearLayout>
